src-tauri/tests/snapshots/pipeline_scenarios__asst_pi_generic_card_renders_extension_output.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: generic-card
      title: Pi extension notification
      subtitle: demo-extension
      body: Custom UI is not available yet
      severity: warning
      status: ~
      provider: pi
      has_details: true
  status:
    type: complete
    reason: stop
  streaming: ~
