src-tauri/tests/snapshots/pipeline_scenarios__codex_pi_mcp_tool_call_text_result_renders_as_tool_output.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: mcp__pi__read
      tool_call_id: codex-mcp-pi-mcp1
      args_keys:
        - limit
        - path
      args_text_length: 33
      has_result: true
      result_kind: string
      result_preview: file contents
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
