src-tauri/tests/snapshots/pipeline_scenarios__codex_pi_reasoning_lifecycle_end_to_end.snap
---
source: tests/pipeline_scenarios.rs
assertion_line: 1376
expression: normalize_stream_fingerprint(&fingerprint)
---
emissions:
  - kind: partial
    line_index: 2
    event_type: item/reasoning/textDelta
    message:
      role: assistant
      id: msg-1
      content:
        - type: reasoning
          text_preview: Pi is thinking.
          streaming: true
          has_duration: false
      streaming: true
  - kind: partial
    line_index: 3
    event_type: item/started
    message:
      role: assistant
      id: msg-2
      content:
        - type: other
          original_type: "tool-call:mcp__pi__read"
      streaming: true
  - kind: full
    line_index: 4
    event_type: item/completed
    messages:
      - role: assistant
        id: msg-1
        content:
          - type: reasoning
            text_preview: Pi is thinking.
            streaming: false
            has_duration: true
          - type: other
            original_type: "tool-call:mcp__pi__read"
        streaming: ~
  - kind: full
    line_index: 5
    event_type: item/completed
    messages:
      - role: assistant
        id: msg-1
        content:
          - type: reasoning
            text_preview: Pi is thinking.
            streaming: false
            has_duration: true
          - type: other
            original_type: "tool-call:mcp__pi__read"
        streaming: ~
  - kind: partial
    line_index: 6
    event_type: item/started
    message:
      role: assistant
      id: msg-3
      content:
        - type: text
          text: ""
      streaming: true
  - kind: partial
    line_index: 7
    event_type: item/agentMessage/delta
    message:
      role: assistant
      id: msg-3
      content:
        - type: text
          text: Done.
      streaming: true
  - kind: full
    line_index: 8
    event_type: item/completed
    messages:
      - role: assistant
        id: msg-1
        content:
          - type: reasoning
            text_preview: Pi is thinking.
            streaming: false
            has_duration: true
          - type: other
            original_type: "tool-call:mcp__pi__read"
          - type: text
            text: Done.
        streaming: ~
  - kind: full
    line_index: 9
    event_type: turn/completed
    messages:
      - role: assistant
        id: msg-1
        content:
          - type: reasoning
            text_preview: Pi is thinking.
            streaming: false
            has_duration: true
          - type: other
            original_type: "tool-call:mcp__pi__read"
          - type: text
            text: Done.
        streaming: ~
      - role: system
        id: msg-4
        content:
          - type: text
            text: 0.0s
        streaming: ~
final_render:
  - role: assistant
    id: msg-1
    content:
      - type: reasoning
        text_preview: Pi is thinking.
        streaming: false
        has_duration: true
      - type: other
        original_type: "tool-call:mcp__pi__read"
      - type: text
        text: Done.
    streaming: ~
  - role: system
    id: msg-4
    content:
      - type: text
        text: 0.0s
    streaming: ~
persisted_turn_blocks:
  - []
  - []
  - []
historical_render:
  - role: assistant
    id: msg-5
    content:
      - type: reasoning
        text_preview: Pi is thinking.
        streaming: ~
        has_duration: true
      - type: other
        original_type: "tool-call:mcp__pi__read"
      - type: text
        text: Done.
    streaming: ~
