src-tauri/tests/snapshots/pipeline_scenarios__pi_file_change_failed_historical_preserves_error_details.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: apply_patch
      tool_call_id: codex-patch-pif1
      args_keys:
        - changes
      args_text_length: 75
      has_result: true
      result_kind: string
      result_preview: "Error: Could not find edits[0] in src/app.ts."
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
