src-tauri/tests/snapshots/pipeline_scenarios__pi_file_change_live_and_historical_reload_match.snap
---
source: tests/pipeline_scenarios.rs
expression: "FileChangeRenderPair { live, historical }"
---
live:
  - role: assistant
    id: msg-1
    content_length: 1
    content:
      - type: tool-call
        tool_name: apply_patch
        tool_call_id: codex-patch-pi_edit_1
        args_keys:
          - changes
        args_text_length: 75
        has_result: true
        result_kind: string
        result_preview: Successfully replaced 1 block(s) in src/app.ts.
        streaming_status: ~
    status:
      type: complete
      reason: stop
    streaming: ~
historical:
  - role: assistant
    id: msg-1
    content_length: 1
    content:
      - type: tool-call
        tool_name: apply_patch
        tool_call_id: codex-patch-hist-0
        args_keys:
          - changes
        args_text_length: 75
        has_result: true
        result_kind: string
        result_preview: Successfully replaced 1 block(s) in src/app.ts.
        streaming_status: ~
    status:
      type: complete
      reason: stop
    streaming: ~
