src-tauri/tests/snapshots/pipeline_scenarios__pi_file_change_write_historical_preserves_file_and_result_details.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: apply_patch
      tool_call_id: codex-patch-piw1
      args_keys:
        - changes
      args_text_length: 89
      has_result: true
      result_kind: string
      result_preview: Successfully wrote 7 bytes to src/new.ts
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
