src-tauri/tests/snapshots/pipeline_scenarios__sys_codex_missing_response_item_recovery_notice.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: system-notice
      severity: warning
      label: Recovering Codex context
      body: "The provider lost part of the prior response context, so Helmor is compacting and retrying."
  status: ~
  streaming: ~
